--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -3,4 +3,5 @@
     <file>./src</file>
     <file>./tests</file>
     <rule ref="./vendor/squizlabs/php_codesniffer/src/Standards/PSR2"/>
+     <exclude-pattern>./tests/assets/**/*</exclude-pattern>
 </ruleset>
