--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: php
+
+env:
+  global:
+    - COMPOSER_MEMORY_LIMIT=-1
 php:
   - '7.0'
   - '7.1'
   - '7.2'
   - '7.3'
+  - '7.4'
 install:
   - composer install --no-interaction
 script:
