--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,14 @@
   "require-dev": {
     "phpunit/phpunit": "^6.5",
     "satooshi/php-coveralls": "^2.0",
-    "squizlabs/php_codesniffer": "^3.3"
+    "squizlabs/php_codesniffer": "^3.3",
+    "cweagans/composer-patches": "^1.6"
+  },
+  "extra": {
+    "patches": {
+      "phpunit/phpunit-mock-objects": {
+        "Fix things on php 7.4": "./patches/mock-obj.patch"
+      }
+    }
   }
 }
