--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ before_install:
 install:
   - composer install --no-interaction
 script:
+  - if [[ $(phpenv version-name) != "7.0" ]]; then composer require --dev cweagans/composer-patches; fi
+  - if [[ $(phpenv version-name) != "7.0" ]]; then rm -rf vendor/phpunit; fi
+  - if [[ $(phpenv version-name) != "7.0" ]]; then composer install; fi
   - php -r "echo ini_get('memory_limit').PHP_EOL;"
   - composer test
 after_success:
