--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,12 @@
     "phpunit/phpunit": "^6.5",
     "satooshi/php-coveralls": "^2.0",
     "squizlabs/php_codesniffer": "^3.3"
+  },
+  "extra": {
+    "patches": {
+      "phpunit/phpunit-mock-objects": {
+        "Fix things on php 7.4": "./patches/mock-obj.patch"
+      }
+    }
   }
 }
