--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
   "scripts": {
     "test": [
       "./vendor/bin/phpunit",
-      "./vendor/bin/phpcs -p -n"
+      "./vendor/bin/phpcs -p -n",
+      "./vendor/bin/phpstan analyse src tests --level=2"
     ]
   },
   "config": {
@@ -34,7 +35,8 @@
   "require-dev": {
     "phpunit/phpunit": "^6.5",
     "satooshi/php-coveralls": "^2.0",
-    "squizlabs/php_codesniffer": "^3.3"
+    "squizlabs/php_codesniffer": "^3.3",
+    "phpstan/phpstan": "^0.12.17"
   },
   "extra": {
     "patches": {
