--- a/composer.json
+++ b/composer.json
@@ -30,13 +30,16 @@
     ]
   },
   "config": {
-    "process-timeout": 1200
+    "process-timeout": 1200,
+    "platform": {
+      "php": "7.0.8"
+    }
   },
   "require-dev": {
     "phpunit/phpunit": "^6.5",
     "satooshi/php-coveralls": "^2.0",
     "squizlabs/php_codesniffer": "^3.3",
-    "phpstan/phpstan": "^0.12.17"
+    "phpstan/phpstan": "^0.9.3"
   },
   "extra": {
     "patches": {
