--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
           php-version: ${{ matrix.php-versions }}
 
       - name: Update composer
-        run: composer --verbose self-update
+        run: composer --verbose self-update --1
 
       - name: Dump composer verson
         run: composer --version
