Try github actions (#25)
* Try github actions

* Try to fix syntax

* Add description to composer.json

* Make sure we are using composer 1

* Remove php 8 testing

* Increase timeouts and try to cache composer files

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "violinist-dev/composer-updater",
+  "description": "Updater package",
   "license": "MIT",
   "authors": [
     {
@@ -30,7 +31,7 @@
     ]
   },
   "config": {
-    "process-timeout": 1200,
+    "process-timeout": 2400,
     "platform": {
       "php": "7.0.8"
     }
