--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
   "config": {
     "process-timeout": 2400,
     "platform": {
-      "php": "7.0.8"
+      "php": "7.10.8"
     },
     "allow-plugins": {
       "ocramius/package-versions": true
@@ -42,8 +42,7 @@
   "require-dev": {
     "phpunit/phpunit": "^6.5",
     "satooshi/php-coveralls": "^2.0",
-    "squizlabs/php_codesniffer": "^3.3",
-    "phpstan/phpstan": "^1"
+    "squizlabs/php_codesniffer": "^3.3"
   },
   "extra": {
     "patches": {
