--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
   "scripts": {
     "test": [
       "./vendor/bin/phpunit",
-      "./vendor/bin/phpcs -p -n",
-      "./vendor/bin/phpstan analyse src tests --level=2 -c phpstan.neon"
+      "./vendor/bin/phpcs -p -n"
     ]
   },
   "config": {
