--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
         run: composer --verbose install
     
       - name: Install dependencies
-        run: composer --verbose --ignore-platform-reqs install
+        run: composer --verbose install
 
       - name: Install patches and phpstan if we have to
         if: matrix.php-versions != 7.0
