--- a/composer.json
+++ b/composer.json
@@ -26,15 +26,11 @@
   "scripts": {
     "test": [
       "./vendor/bin/phpunit",
-      "./vendor/bin/phpcs -p -n",
-      "./vendor/bin/phpstan analyse src tests --level=2 -c phpstan.neon"
+      "./vendor/bin/phpcs -p -n"
     ]
   },
   "config": {
     "process-timeout": 2400,
-    "platform": {
-      "php": "7.0.8"
-    },
     "allow-plugins": {
       "ocramius/package-versions": true,
       "cweagans/composer-patches": true
@@ -43,8 +39,7 @@
   "require-dev": {
     "phpunit/phpunit": "^6.5",
     "satooshi/php-coveralls": "^2.0",
-    "squizlabs/php_codesniffer": "^3.3",
-    "phpstan/phpstan": "^0.9.3"
+    "squizlabs/php_codesniffer": "^3.3"
   },
   "extra": {
     "patches": {
