--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     }
   },
   "require": {
-    "symfony/process": "^2.7 || ^3.0 || ^4.0",
+    "symfony/process": "^2.7 || ^3.0 || ^4.0 || ^5.4",
     "violinist-dev/process-factory": "^1.0",
     "violinist-dev/composer-lock-data": "^1.0"
   },
