--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,11 +72,18 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-composer-${{ matrix.php-version }}
 
+      - name: Coveralls
+        if: matrix.php-version == 7.4
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          php vendor/bin/php-coveralls -v
+
+      - name: Run phpstan
+        if: matrix.php-version != 7.0
+        run: composer phpstan
+
       - name: Run tests
         run: composer test
         env:
           COMPOSER_VERSION: ${{ matrix.composer }}
-
-      - name: run phpstan
-        if: matrix.php-versions != 7.0
-        run: ./vendor/bin/phpstan analyze src tests
