--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
   "require-dev": {
     "phpunit/phpunit": "^6.5 || ^7 || ^8 || ^9",
     "php-coveralls/php-coveralls": "^2.1",
-    "squizlabs/php_codesniffer": "^3.3"
+    "squizlabs/php_codesniffer": "^3.3",
+    "phpstan/phpstan": "^1.0"
   },
   "extra": {
     "patches": {
