--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.5",
+    "phpunit/phpunit": "^6.5 || ^7",
     "satooshi/php-coveralls": "^2.0",
     "squizlabs/php_codesniffer": "^3.3"
   },
