--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,6 @@
 parameters:
-	level: 2
-	excludePaths:
-		- %rootDir%/../../../tests/assets
+        level: 5
+        excludePaths:
+            - tests/assets
+includes:
+    - vendor/phpstan/phpstan-phpunit/extension.neon
