--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
     "phpunit/phpunit": "^6.5 || ^7 || ^8 || ^9",
     "php-coveralls/php-coveralls": "^2.1",
     "squizlabs/php_codesniffer": "^3.3",
-    "phpstan/phpstan": "^1.0"
+    "phpstan/phpstan": "^1.0",
+    "phpstan/phpstan-phpunit": "^1.0"
   }
 }
