--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,12 @@
     }
   },
   "require": {
-    "symfony/process": "^2.7 || ^3.0 || ^4.0",
-    "violinist-dev/process-factory": "^1.0",
+    "symfony/process": "^4.0 || ^5.4",
+    "violinist-dev/process-factory": "^2.0",
     "violinist-dev/composer-lock-data": "^1.0"
   },
   "scripts": {
+    "phpstan": "phpstan analyse src tests",
     "test": [
       "./vendor/bin/phpunit",
       "./vendor/bin/phpcs -p -n"
@@ -37,15 +38,10 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.5 || ^7",
-    "satooshi/php-coveralls": "^2.0",
-    "squizlabs/php_codesniffer": "^3.3"
-  },
-  "extra": {
-    "patches": {
-      "phpunit/phpunit-mock-objects": {
-        "Fix things on php 7.4": "./patches/mock-obj.patch"
-      }
-    }
+    "phpunit/phpunit": "^6.5 || ^7 || ^8 || ^9",
+    "php-coveralls/php-coveralls": "^2.1",
+    "squizlabs/php_codesniffer": "^3.3",
+    "phpstan/phpstan": "^1.0",
+    "phpstan/phpstan-phpunit": "^1.0"
   }
 }
